# silk

./: MANIFEST.in  README.md  pyproject.toml
lib/: __init__.py  logger.py
lib/config/: model.py
lib/utils/: __init__.py  jax.py
scripts/examples/: common.py  silk-inference.py
