[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silk-keypoint-library"
version = "1.0"
description = "[FAIR] SiLK - Simple Learned Keypoints"
authors = [
    { name = "Pierre Gleize", email = "gleize@meta.com" },
    { name = "Weiyao Wang" },
    { name = "Matt Feiszli" },
]
readme = "README.md"
dependencies = [
    "loguru~=0.5",
    "autoflake~=1.4",
    "matplotlib~=3.3",
    "pdoc3~=0.10",
    "hydra-core~=1.2",
    "omegaconf~=2.2",
    "torch>=2.9.0",
    "torchvision~=0.24.0",
    "scikit-image~=0.19",
    "pycocotools~=2.0",
    "jaxlib[cuda112]~=0.4.0",
    "jax~=0.4.0",
    "pyyaml~=6.0",
    "typing-extensions~=4.3",
    "pytorchvideo~=0.1",
    "imageio~=2.19",
    "diskcache~=5.4",
    "pytorch-lightning~=1.5",
    "einops~=0.4",
    "kornia~=0.6",
    "torchmetrics~=0.6",
    "albumentations~=1.3",
    "schema~=0.6",
    "docopt~=0.6"
]

[project.urls]
Homepage = "https://github.com/facebookresearch/silk"

[tool.hatch.build.targets.wheel]
packages = ["silk"]
